nullaway_error_AE31EABD-62CA-4F67-B2C5-3D7FA01DB3AC.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/function/client/DefaultClientRequestObservationConvention.java:92: error: [NullAway] dereferenced expression context.getRequest() is @Nullable
		return "http " + context.getRequest().method().name().toLowerCase();
		                                     ^
    (see http://t.uber.com/nullaway )
